cells: Unify exec implementation and URI handling
The different variants of the exec command were not consistent as they
accepting different options. This patch

- Removes the -run option, which was already flagged for removal
- Makes the loop, ifok and ifnotok options apply to all three versions
- Generalized the URI handling and moved away from CellUrl in CellShell

This patch is a prerequisite for updates for the batch file I will
submit once this patch has been committed.

Target: trunk
Acked-by: Tigran Mkrtchyan <tigran.mkrtchyan@desy.de>
Patch: http://rb.dcache.org/r/850/